--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ monotonic_align/monotonic_align
 /.vs/vits/FileContentIndex
 configs/dracu_japanese_base2.json
 configs/tolove_japanese_base2.json
+.DS_Store
